# jsonfold

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  TODO.md  jsonfold.py  pyproject.toml  test_jsonfold.py
.github/workflows/: unittests.yml
src/jsonfold/: __init__.py  cli.py  fold.py
tests/: test_jsonfold.py
